Kaggle Notebook | Exercise: One-Step Lookahead | Version 2

--- a/exercise-one-step-lookahead.ipynb
+++ b/exercise-one-step-lookahead.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e904face",
+   "id": "f9f557e1",
    "metadata": {
     "papermill": {
-     "duration": 0.005593,
-     "end_time": "2023-05-06T00:05:41.904849",
+     "duration": 0.004683,
+     "end_time": "2023-05-07T00:23:56.961119",
      "exception": false,
-     "start_time": "2023-05-06T00:05:41.899256",
+     "start_time": "2023-05-07T00:23:56.956436",
      "status": "completed"
     },
     "tags": []
@@ -21,13 +21,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fe28cb5",
+   "id": "91463729",
    "metadata": {
     "papermill": {
-     "duration": 0.003614,
-     "end_time": "2023-05-06T00:05:41.913327",
+     "duration": 0.003907,
+     "end_time": "2023-05-07T00:23:56.969463",
      "exception": false,
-     "start_time": "2023-05-06T00:05:41.909713",
+     "start_time": "2023-05-07T00:23:56.965556",
      "status": "completed"
     },
     "tags": []
@@ -43,19 +43,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e8a47390",
+   "id": "da1a6407",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-06T00:05:41.923213Z",
-     "iopub.status.busy": "2023-05-06T00:05:41.922497Z",
-     "iopub.status.idle": "2023-05-06T00:05:42.076608Z",
-     "shell.execute_reply": "2023-05-06T00:05:42.075438Z"
+     "iopub.execute_input": "2023-05-07T00:23:56.981411Z",
+     "iopub.status.busy": "2023-05-07T00:23:56.980368Z",
+     "iopub.status.idle": "2023-05-07T00:23:57.186168Z",
+     "shell.execute_reply": "2023-05-07T00:23:57.184833Z"
     },
     "papermill": {
-     "duration": 0.162234,
-     "end_time": "2023-05-06T00:05:42.079395",
+     "duration": 0.21538,
+     "end_time": "2023-05-07T00:23:57.189013",
      "exception": false,
-     "start_time": "2023-05-06T00:05:41.917161",
+     "start_time": "2023-05-07T00:23:56.973633",
      "status": "completed"
     },
     "tags": []
@@ -77,13 +77,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3682207",
+   "id": "c546c07a",
    "metadata": {
     "papermill": {
-     "duration": 0.003899,
-     "end_time": "2023-05-06T00:05:42.087733",
+     "duration": 0.004115,
+     "end_time": "2023-05-07T00:23:57.197704",
      "exception": false,
-     "start_time": "2023-05-06T00:05:42.083834",
+     "start_time": "2023-05-07T00:23:57.193589",
      "status": "completed"
     },
     "tags": []
@@ -139,19 +139,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "10fd5061",
+   "id": "e65e0633",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-06T00:05:42.098044Z",
-     "iopub.status.busy": "2023-05-06T00:05:42.097658Z",
-     "iopub.status.idle": "2023-05-06T00:05:55.672984Z",
-     "shell.execute_reply": "2023-05-06T00:05:55.671631Z"
+     "iopub.execute_input": "2023-05-07T00:23:57.207934Z",
+     "iopub.status.busy": "2023-05-07T00:23:57.207540Z",
+     "iopub.status.idle": "2023-05-07T00:24:11.505627Z",
+     "shell.execute_reply": "2023-05-07T00:24:11.504541Z"
     },
     "papermill": {
-     "duration": 13.583586,
-     "end_time": "2023-05-06T00:05:55.675277",
+     "duration": 14.306259,
+     "end_time": "2023-05-07T00:24:11.508233",
      "exception": false,
-     "start_time": "2023-05-06T00:05:42.091691",
+     "start_time": "2023-05-07T00:23:57.201974",
      "status": "completed"
     },
     "tags": []
@@ -205,19 +205,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7b66eddc",
+   "id": "0aca5658",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-06T00:05:55.686490Z",
-     "iopub.status.busy": "2023-05-06T00:05:55.686125Z",
-     "iopub.status.idle": "2023-05-06T00:05:55.690602Z",
-     "shell.execute_reply": "2023-05-06T00:05:55.689332Z"
+     "iopub.execute_input": "2023-05-07T00:24:11.520118Z",
+     "iopub.status.busy": "2023-05-07T00:24:11.519733Z",
+     "iopub.status.idle": "2023-05-07T00:24:11.525106Z",
+     "shell.execute_reply": "2023-05-07T00:24:11.523869Z"
     },
     "papermill": {
-     "duration": 0.013192,
-     "end_time": "2023-05-06T00:05:55.693305",
+     "duration": 0.014751,
+     "end_time": "2023-05-07T00:24:11.527709",
      "exception": false,
-     "start_time": "2023-05-06T00:05:55.680113",
+     "start_time": "2023-05-07T00:24:11.512958",
      "status": "completed"
     },
     "tags": []
@@ -231,13 +231,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca17bc35",
+   "id": "baf7442d",
    "metadata": {
     "papermill": {
-     "duration": 0.004208,
-     "end_time": "2023-05-06T00:05:55.702261",
+     "duration": 0.004526,
+     "end_time": "2023-05-07T00:24:11.536882",
      "exception": false,
-     "start_time": "2023-05-06T00:05:55.698053",
+     "start_time": "2023-05-07T00:24:11.532356",
      "status": "completed"
     },
     "tags": []
@@ -259,19 +259,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "051f53c7",
+   "id": "24f50bfd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-06T00:05:55.713075Z",
-     "iopub.status.busy": "2023-05-06T00:05:55.712683Z",
-     "iopub.status.idle": "2023-05-06T00:05:55.717535Z",
-     "shell.execute_reply": "2023-05-06T00:05:55.716372Z"
+     "iopub.execute_input": "2023-05-07T00:24:11.548493Z",
+     "iopub.status.busy": "2023-05-07T00:24:11.548071Z",
+     "iopub.status.idle": "2023-05-07T00:24:11.553383Z",
+     "shell.execute_reply": "2023-05-07T00:24:11.552211Z"
     },
     "papermill": {
-     "duration": 0.013196,
-     "end_time": "2023-05-06T00:05:55.719963",
+     "duration": 0.013617,
+     "end_time": "2023-05-07T00:24:11.555685",
      "exception": false,
-     "start_time": "2023-05-06T00:05:55.706767",
+     "start_time": "2023-05-07T00:24:11.542068",
      "status": "completed"
     },
     "tags": []
@@ -284,19 +284,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4b706646",
+   "id": "edce5c37",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-06T00:05:55.730735Z",
-     "iopub.status.busy": "2023-05-06T00:05:55.730333Z",
-     "iopub.status.idle": "2023-05-06T00:05:55.739869Z",
-     "shell.execute_reply": "2023-05-06T00:05:55.738773Z"
+     "iopub.execute_input": "2023-05-07T00:24:11.568000Z",
+     "iopub.status.busy": "2023-05-07T00:24:11.567546Z",
+     "iopub.status.idle": "2023-05-07T00:24:11.578858Z",
+     "shell.execute_reply": "2023-05-07T00:24:11.577648Z"
     },
     "papermill": {
-     "duration": 0.01781,
-     "end_time": "2023-05-06T00:05:55.742232",
+     "duration": 0.020843,
+     "end_time": "2023-05-07T00:24:11.581286",
      "exception": false,
-     "start_time": "2023-05-06T00:05:55.724422",
+     "start_time": "2023-05-07T00:24:11.560443",
      "status": "completed"
     },
     "tags": []
@@ -346,13 +346,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a2e6faf",
+   "id": "8724458f",
    "metadata": {
     "papermill": {
-     "duration": 0.004501,
-     "end_time": "2023-05-06T00:05:55.751902",
+     "duration": 0.004597,
+     "end_time": "2023-05-07T00:24:11.590908",
      "exception": false,
-     "start_time": "2023-05-06T00:05:55.747401",
+     "start_time": "2023-05-07T00:24:11.586311",
      "status": "completed"
     },
     "tags": []
@@ -368,19 +368,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1bf6f01b",
+   "id": "2f73f906",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-06T00:05:55.763001Z",
-     "iopub.status.busy": "2023-05-06T00:05:55.762590Z",
-     "iopub.status.idle": "2023-05-06T00:05:55.768599Z",
-     "shell.execute_reply": "2023-05-06T00:05:55.767499Z"
+     "iopub.execute_input": "2023-05-07T00:24:11.602997Z",
+     "iopub.status.busy": "2023-05-07T00:24:11.602582Z",
+     "iopub.status.idle": "2023-05-07T00:24:11.620957Z",
+     "shell.execute_reply": "2023-05-07T00:24:11.619772Z"
     },
     "papermill": {
-     "duration": 0.014328,
-     "end_time": "2023-05-06T00:05:55.770942",
+     "duration": 0.027967,
+     "end_time": "2023-05-07T00:24:11.623728",
      "exception": false,
-     "start_time": "2023-05-06T00:05:55.756614",
+     "start_time": "2023-05-07T00:24:11.595761",
      "status": "completed"
     },
     "tags": []
@@ -390,26 +390,89 @@
     "def my_agent(obs, config):\n",
     "    # Your code here: Amend the agent!\n",
     "    import random\n",
-    "    valid_moves = [col for col in range(config.columns) if obs.board[col] == 0]\n",
-    "    return random.choice(valid_moves)"
+    "    # Calculates score if agent drops piece in selected column\n",
+    "    def score_move(grid, col, mark, config):\n",
+    "        next_grid = drop_piece(grid, col, mark, config)\n",
+    "        score = get_heuristic(next_grid, mark, config)\n",
+    "        return score\n",
+    "\n",
+    "    # Helper function for score_move: gets board at next step if agent drops piece in selected column\n",
+    "    def drop_piece(grid, col, mark, config):\n",
+    "        next_grid = grid.copy()\n",
+    "        for row in range(config.rows-1, -1, -1):\n",
+    "            if next_grid[row][col] == 0:\n",
+    "                break\n",
+    "        next_grid[row][col] = mark\n",
+    "        return next_grid\n",
+    "\n",
+    "    # Helper function for score_move: calculates value of heuristic for grid\n",
+    "    def get_heuristic(grid, mark, config):\n",
+    "        num_threes = count_windows(grid, 3, mark, config)\n",
+    "        num_fours = count_windows(grid, 4, mark, config)\n",
+    "        num_threes_opp = count_windows(grid, 3, mark%2+1, config)\n",
+    "        score = num_threes - 1e2*num_threes_opp + 1e6*num_fours\n",
+    "        return score\n",
+    "\n",
+    "    # Helper function for get_heuristic: checks if window satisfies heuristic conditions\n",
+    "    def check_window(window, num_discs, piece, config):\n",
+    "        return (window.count(piece) == num_discs and window.count(0) == config.inarow-num_discs)\n",
+    "\n",
+    "    # Helper function for get_heuristic: counts number of windows satisfying specified heuristic conditions\n",
+    "    def count_windows(grid, num_discs, piece, config):\n",
+    "        num_windows = 0\n",
+    "        # horizontal\n",
+    "        for row in range(config.rows):\n",
+    "            for col in range(config.columns-(config.inarow-1)):\n",
+    "                window = list(grid[row, col:col+config.inarow])\n",
+    "                if check_window(window, num_discs, piece, config):\n",
+    "                    num_windows += 1\n",
+    "        # vertical\n",
+    "        for row in range(config.rows-(config.inarow-1)):\n",
+    "            for col in range(config.columns):\n",
+    "                window = list(grid[row:row+config.inarow, col])\n",
+    "                if check_window(window, num_discs, piece, config):\n",
+    "                    num_windows += 1\n",
+    "        # positive diagonal\n",
+    "        for row in range(config.rows-(config.inarow-1)):\n",
+    "            for col in range(config.columns-(config.inarow-1)):\n",
+    "                window = list(grid[range(row, row+config.inarow), range(col, col+config.inarow)])\n",
+    "                if check_window(window, num_discs, piece, config):\n",
+    "                    num_windows += 1\n",
+    "        # negative diagonal\n",
+    "        for row in range(config.inarow-1, config.rows):\n",
+    "            for col in range(config.columns-(config.inarow-1)):\n",
+    "                window = list(grid[range(row, row-config.inarow, -1), range(col, col+config.inarow)])\n",
+    "                if check_window(window, num_discs, piece, config):\n",
+    "                    num_windows += 1\n",
+    "        return num_windows\n",
+    "    # Get list of valid moves\n",
+    "    valid_moves = [c for c in range(config.columns) if obs.board[c] == 0]\n",
+    "    # Convert the board to a 2D grid\n",
+    "    grid = np.asarray(obs.board).reshape(config.rows, config.columns)\n",
+    "    # Use the heuristic to assign a score to each possible board in the next turn\n",
+    "    scores = dict(zip(valid_moves, [score_move(grid, col, obs.mark, config) for col in valid_moves]))\n",
+    "    # Get a list of columns (moves) that maximize the heuristic\n",
+    "    max_cols = [key for key in scores.keys() if scores[key] == max(scores.values())]\n",
+    "    # Select at random from the maximizing columns\n",
+    "    return random.choice(max_cols)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e3a7cb94",
+   "id": "92588f30",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-06T00:05:55.782405Z",
-     "iopub.status.busy": "2023-05-06T00:05:55.781975Z",
-     "iopub.status.idle": "2023-05-06T00:05:55.790523Z",
-     "shell.execute_reply": "2023-05-06T00:05:55.789264Z"
+     "iopub.execute_input": "2023-05-07T00:24:11.636476Z",
+     "iopub.status.busy": "2023-05-07T00:24:11.635263Z",
+     "iopub.status.idle": "2023-05-07T00:24:11.643231Z",
+     "shell.execute_reply": "2023-05-07T00:24:11.642398Z"
     },
     "papermill": {
-     "duration": 0.017096,
-     "end_time": "2023-05-06T00:05:55.792940",
+     "duration": 0.016517,
+     "end_time": "2023-05-07T00:24:11.645302",
      "exception": false,
-     "start_time": "2023-05-06T00:05:55.775844",
+     "start_time": "2023-05-07T00:24:11.628785",
      "status": "completed"
     },
     "tags": []
@@ -447,13 +510,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06c4640f",
+   "id": "34155e20",
    "metadata": {
     "papermill": {
-     "duration": 0.00465,
-     "end_time": "2023-05-06T00:05:55.802505",
+     "duration": 0.004668,
+     "end_time": "2023-05-07T00:24:11.655063",
      "exception": false,
-     "start_time": "2023-05-06T00:05:55.797855",
+     "start_time": "2023-05-07T00:24:11.650395",
      "status": "completed"
     },
     "tags": []
@@ -465,19 +528,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "224185e2",
+   "id": "9965dccc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-06T00:05:55.814020Z",
-     "iopub.status.busy": "2023-05-06T00:05:55.813630Z",
-     "iopub.status.idle": "2023-05-06T00:05:55.821273Z",
-     "shell.execute_reply": "2023-05-06T00:05:55.820219Z"
+     "iopub.execute_input": "2023-05-07T00:24:11.666994Z",
+     "iopub.status.busy": "2023-05-07T00:24:11.666615Z",
+     "iopub.status.idle": "2023-05-07T00:24:11.676662Z",
+     "shell.execute_reply": "2023-05-07T00:24:11.675176Z"
     },
     "papermill": {
-     "duration": 0.016069,
-     "end_time": "2023-05-06T00:05:55.823399",
+     "duration": 0.019458,
+     "end_time": "2023-05-07T00:24:11.679529",
      "exception": false,
-     "start_time": "2023-05-06T00:05:55.807330",
+     "start_time": "2023-05-07T00:24:11.660071",
      "status": "completed"
     },
     "tags": []
@@ -487,7 +550,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function my_agent at 0x787e71e6e200> written to submission.py\n"
+      "<function my_agent at 0x77a55686bf40> written to submission.py\n"
      ]
     }
    ],
@@ -505,13 +568,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8494e2c2",
+   "id": "b958118b",
    "metadata": {
     "papermill": {
-     "duration": 0.004598,
-     "end_time": "2023-05-06T00:05:55.832952",
+     "duration": 0.004855,
+     "end_time": "2023-05-07T00:24:11.689499",
      "exception": false,
-     "start_time": "2023-05-06T00:05:55.828354",
+     "start_time": "2023-05-07T00:24:11.684644",
      "status": "completed"
     },
     "tags": []
@@ -537,13 +600,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f246d421",
+   "id": "d5f3ee04",
    "metadata": {
     "papermill": {
-     "duration": 0.00462,
-     "end_time": "2023-05-06T00:05:55.842409",
+     "duration": 0.004806,
+     "end_time": "2023-05-07T00:24:11.699303",
      "exception": false,
-     "start_time": "2023-05-06T00:05:55.837789",
+     "start_time": "2023-05-07T00:24:11.694497",
      "status": "completed"
     },
     "tags": []
@@ -578,14 +641,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 27.58667,
-   "end_time": "2023-05-06T00:05:56.869623",
+   "duration": 30.602361,
+   "end_time": "2023-05-07T00:24:12.728829",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-05-06T00:05:29.282953",
+   "start_time": "2023-05-07T00:23:42.126468",
    "version": "2.4.0"
   }
  },
