Kaggle Notebook | Exercise: N-Step Lookahead | Version 3

--- a/exercise-n-step-lookahead.ipynb
+++ b/exercise-n-step-lookahead.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0b23bb1f",
+   "id": "a1d8faf2",
    "metadata": {
     "papermill": {
-     "duration": 0.006186,
-     "end_time": "2023-05-07T00:30:13.572684",
+     "duration": 0.005729,
+     "end_time": "2023-05-07T00:32:46.770044",
      "exception": false,
-     "start_time": "2023-05-07T00:30:13.566498",
+     "start_time": "2023-05-07T00:32:46.764315",
      "status": "completed"
     },
     "tags": []
@@ -21,13 +21,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12e623a7",
+   "id": "86a2a8c0",
    "metadata": {
     "papermill": {
-     "duration": 0.00494,
-     "end_time": "2023-05-07T00:30:13.583171",
+     "duration": 0.004945,
+     "end_time": "2023-05-07T00:32:46.780470",
      "exception": false,
-     "start_time": "2023-05-07T00:30:13.578231",
+     "start_time": "2023-05-07T00:32:46.775525",
      "status": "completed"
     },
     "tags": []
@@ -41,19 +41,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "828c93e0",
+   "id": "17df6f19",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-07T00:30:13.595820Z",
-     "iopub.status.busy": "2023-05-07T00:30:13.595345Z",
-     "iopub.status.idle": "2023-05-07T00:30:13.654916Z",
-     "shell.execute_reply": "2023-05-07T00:30:13.653816Z"
+     "iopub.execute_input": "2023-05-07T00:32:46.793156Z",
+     "iopub.status.busy": "2023-05-07T00:32:46.792444Z",
+     "iopub.status.idle": "2023-05-07T00:32:46.837226Z",
+     "shell.execute_reply": "2023-05-07T00:32:46.836421Z"
     },
     "papermill": {
-     "duration": 0.069746,
-     "end_time": "2023-05-07T00:30:13.658113",
+     "duration": 0.054163,
+     "end_time": "2023-05-07T00:32:46.839966",
      "exception": false,
-     "start_time": "2023-05-07T00:30:13.588367",
+     "start_time": "2023-05-07T00:32:46.785803",
      "status": "completed"
     },
     "tags": []
@@ -67,13 +67,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "905b1507",
+   "id": "5b5691ca",
    "metadata": {
     "papermill": {
-     "duration": 0.00551,
-     "end_time": "2023-05-07T00:30:13.669487",
+     "duration": 0.005057,
+     "end_time": "2023-05-07T00:32:46.850497",
      "exception": false,
-     "start_time": "2023-05-07T00:30:13.663977",
+     "start_time": "2023-05-07T00:32:46.845440",
      "status": "completed"
     },
     "tags": []
@@ -103,19 +103,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2f8905fc",
+   "id": "48e4c49c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-07T00:30:13.682671Z",
-     "iopub.status.busy": "2023-05-07T00:30:13.682166Z",
-     "iopub.status.idle": "2023-05-07T00:30:13.687033Z",
-     "shell.execute_reply": "2023-05-07T00:30:13.685928Z"
+     "iopub.execute_input": "2023-05-07T00:32:46.862787Z",
+     "iopub.status.busy": "2023-05-07T00:32:46.862372Z",
+     "iopub.status.idle": "2023-05-07T00:32:46.866792Z",
+     "shell.execute_reply": "2023-05-07T00:32:46.865762Z"
     },
     "papermill": {
-     "duration": 0.014291,
-     "end_time": "2023-05-07T00:30:13.689329",
+     "duration": 0.013245,
+     "end_time": "2023-05-07T00:32:46.869011",
      "exception": false,
-     "start_time": "2023-05-07T00:30:13.675038",
+     "start_time": "2023-05-07T00:32:46.855766",
      "status": "completed"
     },
     "tags": []
@@ -128,19 +128,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cb80db48",
+   "id": "35c5dd33",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-07T00:30:13.703222Z",
-     "iopub.status.busy": "2023-05-07T00:30:13.702809Z",
-     "iopub.status.idle": "2023-05-07T00:30:13.714727Z",
-     "shell.execute_reply": "2023-05-07T00:30:13.713595Z"
+     "iopub.execute_input": "2023-05-07T00:32:46.881334Z",
+     "iopub.status.busy": "2023-05-07T00:32:46.880985Z",
+     "iopub.status.idle": "2023-05-07T00:32:46.890644Z",
+     "shell.execute_reply": "2023-05-07T00:32:46.889473Z"
     },
     "papermill": {
-     "duration": 0.022065,
-     "end_time": "2023-05-07T00:30:13.717158",
+     "duration": 0.018229,
+     "end_time": "2023-05-07T00:32:46.892759",
      "exception": false,
-     "start_time": "2023-05-07T00:30:13.695093",
+     "start_time": "2023-05-07T00:32:46.874530",
      "status": "completed"
     },
     "tags": []
@@ -178,13 +178,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd04d894",
+   "id": "18d731fb",
    "metadata": {
     "papermill": {
-     "duration": 0.005737,
-     "end_time": "2023-05-07T00:30:13.728769",
+     "duration": 0.005884,
+     "end_time": "2023-05-07T00:32:46.904190",
      "exception": false,
-     "start_time": "2023-05-07T00:30:13.723032",
+     "start_time": "2023-05-07T00:32:46.898306",
      "status": "completed"
     },
     "tags": []
@@ -210,19 +210,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "14f1d728",
+   "id": "3c3c758d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-07T00:30:13.742157Z",
-     "iopub.status.busy": "2023-05-07T00:30:13.741729Z",
-     "iopub.status.idle": "2023-05-07T00:30:13.750366Z",
-     "shell.execute_reply": "2023-05-07T00:30:13.749232Z"
+     "iopub.execute_input": "2023-05-07T00:32:46.917353Z",
+     "iopub.status.busy": "2023-05-07T00:32:46.916985Z",
+     "iopub.status.idle": "2023-05-07T00:32:46.926833Z",
+     "shell.execute_reply": "2023-05-07T00:32:46.925850Z"
     },
     "papermill": {
-     "duration": 0.018108,
-     "end_time": "2023-05-07T00:30:13.752505",
+     "duration": 0.018931,
+     "end_time": "2023-05-07T00:32:46.928899",
      "exception": false,
-     "start_time": "2023-05-07T00:30:13.734397",
+     "start_time": "2023-05-07T00:32:46.909968",
      "status": "completed"
     },
     "tags": []
@@ -264,19 +264,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ad4ea956",
+   "id": "97da5de0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-07T00:30:13.766289Z",
-     "iopub.status.busy": "2023-05-07T00:30:13.765875Z",
-     "iopub.status.idle": "2023-05-07T00:30:13.770581Z",
-     "shell.execute_reply": "2023-05-07T00:30:13.769480Z"
+     "iopub.execute_input": "2023-05-07T00:32:46.943096Z",
+     "iopub.status.busy": "2023-05-07T00:32:46.942741Z",
+     "iopub.status.idle": "2023-05-07T00:32:46.946742Z",
+     "shell.execute_reply": "2023-05-07T00:32:46.945615Z"
     },
     "papermill": {
-     "duration": 0.013978,
-     "end_time": "2023-05-07T00:30:13.772489",
+     "duration": 0.014064,
+     "end_time": "2023-05-07T00:32:46.948918",
      "exception": false,
-     "start_time": "2023-05-07T00:30:13.758511",
+     "start_time": "2023-05-07T00:32:46.934854",
      "status": "completed"
     },
     "tags": []
@@ -290,13 +290,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecc249fd",
+   "id": "5129e8ef",
    "metadata": {
     "papermill": {
-     "duration": 0.005619,
-     "end_time": "2023-05-07T00:30:13.783950",
+     "duration": 0.005689,
+     "end_time": "2023-05-07T00:32:46.960857",
      "exception": false,
-     "start_time": "2023-05-07T00:30:13.778331",
+     "start_time": "2023-05-07T00:32:46.955168",
      "status": "completed"
     },
     "tags": []
@@ -318,19 +318,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "11655975",
+   "id": "087729e6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-07T00:30:13.797342Z",
-     "iopub.status.busy": "2023-05-07T00:30:13.796892Z",
-     "iopub.status.idle": "2023-05-07T00:30:13.806103Z",
-     "shell.execute_reply": "2023-05-07T00:30:13.805090Z"
+     "iopub.execute_input": "2023-05-07T00:32:46.975280Z",
+     "iopub.status.busy": "2023-05-07T00:32:46.974691Z",
+     "iopub.status.idle": "2023-05-07T00:32:46.983308Z",
+     "shell.execute_reply": "2023-05-07T00:32:46.982459Z"
     },
     "papermill": {
-     "duration": 0.018998,
-     "end_time": "2023-05-07T00:30:13.808619",
+     "duration": 0.018196,
+     "end_time": "2023-05-07T00:32:46.985547",
      "exception": false,
-     "start_time": "2023-05-07T00:30:13.789621",
+     "start_time": "2023-05-07T00:32:46.967351",
      "status": "completed"
     },
     "tags": []
@@ -372,19 +372,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b02cc876",
+   "id": "e4d19890",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-07T00:30:13.823488Z",
-     "iopub.status.busy": "2023-05-07T00:30:13.823011Z",
-     "iopub.status.idle": "2023-05-07T00:30:13.828195Z",
-     "shell.execute_reply": "2023-05-07T00:30:13.826923Z"
+     "iopub.execute_input": "2023-05-07T00:32:46.999849Z",
+     "iopub.status.busy": "2023-05-07T00:32:46.998971Z",
+     "iopub.status.idle": "2023-05-07T00:32:47.003513Z",
+     "shell.execute_reply": "2023-05-07T00:32:47.002674Z"
     },
     "papermill": {
-     "duration": 0.01544,
-     "end_time": "2023-05-07T00:30:13.830529",
+     "duration": 0.014102,
+     "end_time": "2023-05-07T00:32:47.005723",
      "exception": false,
-     "start_time": "2023-05-07T00:30:13.815089",
+     "start_time": "2023-05-07T00:32:46.991621",
      "status": "completed"
     },
     "tags": []
@@ -398,13 +398,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4929753e",
+   "id": "de9049d1",
    "metadata": {
     "papermill": {
-     "duration": 0.005962,
-     "end_time": "2023-05-07T00:30:13.842858",
+     "duration": 0.006473,
+     "end_time": "2023-05-07T00:32:47.018316",
      "exception": false,
-     "start_time": "2023-05-07T00:30:13.836896",
+     "start_time": "2023-05-07T00:32:47.011843",
      "status": "completed"
     },
     "tags": []
@@ -420,19 +420,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "833f24a9",
+   "id": "1cf63c03",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-07T00:30:13.858423Z",
-     "iopub.status.busy": "2023-05-07T00:30:13.857465Z",
-     "iopub.status.idle": "2023-05-07T00:30:13.862582Z",
-     "shell.execute_reply": "2023-05-07T00:30:13.861383Z"
+     "iopub.execute_input": "2023-05-07T00:32:47.032421Z",
+     "iopub.status.busy": "2023-05-07T00:32:47.032011Z",
+     "iopub.status.idle": "2023-05-07T00:32:47.036512Z",
+     "shell.execute_reply": "2023-05-07T00:32:47.035489Z"
     },
     "papermill": {
-     "duration": 0.015596,
-     "end_time": "2023-05-07T00:30:13.864973",
+     "duration": 0.014243,
+     "end_time": "2023-05-07T00:32:47.038641",
      "exception": false,
-     "start_time": "2023-05-07T00:30:13.849377",
+     "start_time": "2023-05-07T00:32:47.024398",
      "status": "completed"
     },
     "tags": []
@@ -445,19 +445,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "04019f47",
+   "id": "77feef07",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-07T00:30:13.880370Z",
-     "iopub.status.busy": "2023-05-07T00:30:13.879933Z",
-     "iopub.status.idle": "2023-05-07T00:30:13.887774Z",
-     "shell.execute_reply": "2023-05-07T00:30:13.886959Z"
+     "iopub.execute_input": "2023-05-07T00:32:47.053449Z",
+     "iopub.status.busy": "2023-05-07T00:32:47.053051Z",
+     "iopub.status.idle": "2023-05-07T00:32:47.061536Z",
+     "shell.execute_reply": "2023-05-07T00:32:47.060494Z"
     },
     "papermill": {
-     "duration": 0.017974,
-     "end_time": "2023-05-07T00:30:13.889723",
+     "duration": 0.018988,
+     "end_time": "2023-05-07T00:32:47.063783",
      "exception": false,
-     "start_time": "2023-05-07T00:30:13.871749",
+     "start_time": "2023-05-07T00:32:47.044795",
      "status": "completed"
     },
     "tags": []
@@ -495,13 +495,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b777dd7",
+   "id": "02b7f966",
    "metadata": {
     "papermill": {
-     "duration": 0.006519,
-     "end_time": "2023-05-07T00:30:13.902745",
+     "duration": 0.0066,
+     "end_time": "2023-05-07T00:32:47.076812",
      "exception": false,
-     "start_time": "2023-05-07T00:30:13.896226",
+     "start_time": "2023-05-07T00:32:47.070212",
      "status": "completed"
     },
     "tags": []
@@ -519,19 +519,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "25c285c5",
+   "id": "8ac27ab0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-07T00:30:13.922036Z",
-     "iopub.status.busy": "2023-05-07T00:30:13.920695Z",
-     "iopub.status.idle": "2023-05-07T00:30:13.930143Z",
-     "shell.execute_reply": "2023-05-07T00:30:13.928290Z"
+     "iopub.execute_input": "2023-05-07T00:32:47.091481Z",
+     "iopub.status.busy": "2023-05-07T00:32:47.091070Z",
+     "iopub.status.idle": "2023-05-07T00:32:47.096949Z",
+     "shell.execute_reply": "2023-05-07T00:32:47.095859Z"
     },
     "papermill": {
-     "duration": 0.026026,
-     "end_time": "2023-05-07T00:30:13.935581",
+     "duration": 0.016052,
+     "end_time": "2023-05-07T00:32:47.099428",
      "exception": false,
-     "start_time": "2023-05-07T00:30:13.909555",
+     "start_time": "2023-05-07T00:32:47.083376",
      "status": "completed"
     },
     "tags": []
@@ -551,19 +551,19 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9e7a4f86",
+   "id": "00848071",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-07T00:30:13.955910Z",
-     "iopub.status.busy": "2023-05-07T00:30:13.955447Z",
-     "iopub.status.idle": "2023-05-07T00:30:13.976184Z",
-     "shell.execute_reply": "2023-05-07T00:30:13.973987Z"
+     "iopub.execute_input": "2023-05-07T00:32:47.114288Z",
+     "iopub.status.busy": "2023-05-07T00:32:47.113902Z",
+     "iopub.status.idle": "2023-05-07T00:32:47.129287Z",
+     "shell.execute_reply": "2023-05-07T00:32:47.128144Z"
     },
     "papermill": {
-     "duration": 0.034464,
-     "end_time": "2023-05-07T00:30:13.979898",
+     "duration": 0.026832,
+     "end_time": "2023-05-07T00:32:47.132700",
      "exception": false,
-     "start_time": "2023-05-07T00:30:13.945434",
+     "start_time": "2023-05-07T00:32:47.105868",
      "status": "completed"
     },
     "tags": []
@@ -635,19 +635,19 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8420933b",
+   "id": "d8940583",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-07T00:30:13.997960Z",
-     "iopub.status.busy": "2023-05-07T00:30:13.997022Z",
-     "iopub.status.idle": "2023-05-07T00:30:14.025085Z",
-     "shell.execute_reply": "2023-05-07T00:30:14.024030Z"
+     "iopub.execute_input": "2023-05-07T00:32:47.147699Z",
+     "iopub.status.busy": "2023-05-07T00:32:47.147294Z",
+     "iopub.status.idle": "2023-05-07T00:32:47.169019Z",
+     "shell.execute_reply": "2023-05-07T00:32:47.167835Z"
     },
     "papermill": {
-     "duration": 0.041023,
-     "end_time": "2023-05-07T00:30:14.028019",
+     "duration": 0.032445,
+     "end_time": "2023-05-07T00:32:47.171726",
      "exception": false,
-     "start_time": "2023-05-07T00:30:13.986996",
+     "start_time": "2023-05-07T00:32:47.139281",
      "status": "completed"
     },
     "tags": []
@@ -657,6 +657,14 @@
     "# How deep to make the game tree: higher values take longer to run!\n",
     "N_STEPS = 3\n",
     "def my_agent(obs, config):\n",
+    "    # Helper function for minimax: calculates value of heuristic for grid\n",
+    "    def get_heuristic(grid, mark, config):\n",
+    "        num_threes = count_windows(grid, 3, mark, config)\n",
+    "        num_fours = count_windows(grid, 4, mark, config)\n",
+    "        num_threes_opp = count_windows(grid, 3, mark%2+1, config)\n",
+    "        num_fours_opp = count_windows(grid, 4, mark%2+1, config)\n",
+    "        score = num_threes - 1e2*num_threes_opp - 1e4*num_fours_opp + 1e6*num_fours\n",
+    "        return score\n",
     "    # Uses minimax to calculate value of dropping piece in selected column\n",
     "    def score_move(grid, col, mark, config, nsteps):\n",
     "        next_grid = drop_piece(grid, col, mark, config)\n",
@@ -733,19 +741,19 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "35ab6e5a",
+   "id": "91242366",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-07T00:30:14.043386Z",
-     "iopub.status.busy": "2023-05-07T00:30:14.042940Z",
-     "iopub.status.idle": "2023-05-07T00:30:14.051844Z",
-     "shell.execute_reply": "2023-05-07T00:30:14.050737Z"
+     "iopub.execute_input": "2023-05-07T00:32:47.186345Z",
+     "iopub.status.busy": "2023-05-07T00:32:47.185956Z",
+     "iopub.status.idle": "2023-05-07T00:32:47.195958Z",
+     "shell.execute_reply": "2023-05-07T00:32:47.194742Z"
     },
     "papermill": {
-     "duration": 0.019311,
-     "end_time": "2023-05-07T00:30:14.054166",
+     "duration": 0.020185,
+     "end_time": "2023-05-07T00:32:47.198277",
      "exception": false,
-     "start_time": "2023-05-07T00:30:14.034855",
+     "start_time": "2023-05-07T00:32:47.178092",
      "status": "completed"
     },
     "tags": []
@@ -784,19 +792,19 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "130a9b3c",
+   "id": "3ffd48c7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-07T00:30:14.071426Z",
-     "iopub.status.busy": "2023-05-07T00:30:14.070518Z",
-     "iopub.status.idle": "2023-05-07T00:30:14.085453Z",
-     "shell.execute_reply": "2023-05-07T00:30:14.083864Z"
+     "iopub.execute_input": "2023-05-07T00:32:47.213966Z",
+     "iopub.status.busy": "2023-05-07T00:32:47.213593Z",
+     "iopub.status.idle": "2023-05-07T00:32:47.224675Z",
+     "shell.execute_reply": "2023-05-07T00:32:47.223472Z"
     },
     "papermill": {
-     "duration": 0.026949,
-     "end_time": "2023-05-07T00:30:14.088796",
+     "duration": 0.021684,
+     "end_time": "2023-05-07T00:32:47.226896",
      "exception": false,
-     "start_time": "2023-05-07T00:30:14.061847",
+     "start_time": "2023-05-07T00:32:47.205212",
      "status": "completed"
     },
     "tags": []
@@ -806,7 +814,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function my_agent at 0x75b872394700> written to submission.py\n"
+      "<function my_agent at 0x760972508700> written to submission.py\n"
      ]
     }
    ],
@@ -824,13 +832,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2e41275",
+   "id": "a04745cf",
    "metadata": {
     "papermill": {
-     "duration": 0.00876,
-     "end_time": "2023-05-07T00:30:14.107697",
+     "duration": 0.006345,
+     "end_time": "2023-05-07T00:32:47.240222",
      "exception": false,
-     "start_time": "2023-05-07T00:30:14.098937",
+     "start_time": "2023-05-07T00:32:47.233877",
      "status": "completed"
     },
     "tags": []
@@ -856,13 +864,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9366a876",
+   "id": "f609a5ff",
    "metadata": {
     "papermill": {
-     "duration": 0.010008,
-     "end_time": "2023-05-07T00:30:14.129278",
+     "duration": 0.006375,
+     "end_time": "2023-05-07T00:32:47.253341",
      "exception": false,
-     "start_time": "2023-05-07T00:30:14.119270",
+     "start_time": "2023-05-07T00:32:47.246966",
      "status": "completed"
     },
     "tags": []
@@ -897,14 +905,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 12.994604,
-   "end_time": "2023-05-07T00:30:15.164232",
+   "duration": 13.522491,
+   "end_time": "2023-05-07T00:32:48.182756",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-05-07T00:30:02.169628",
+   "start_time": "2023-05-07T00:32:34.660265",
    "version": "2.4.0"
   }
  },
